--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   background: white;
 }
 
-/* li {
+ li {
   list-style: none;
   cursor: pointer;
   position: relative;
@@ -25,6 +25,7 @@ li:hover::before {
   width: 100%;
   background: #2a68ff;
   right: 0;
+  bottom: -10px;
   color: #2a68ff;
 }
 
@@ -33,4 +34,4 @@ li:hover::before {
 }
 .card{
     background: #000;
-} */
+} 
