--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,34 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-family: "Poppins", sans-serif;
+
+.my-container {
+  @apply px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20
 }
 
-body {
-  background: white;
+.product-container {
+  @apply grid gap-8 mb-8 md:grid-cols-2 lg:grid-cols-3
 }
 
- li {
-  list-style: none;
-  cursor: pointer;
-  position: relative;
+.btn-primary {
+  @apply font-medium m-0 px-4 py-2 md:px-8 text-white md:py-3 m-2 text-lg rounded-xl  border-transparent border-2 bg-gradient-to-r from-[#7E90FE] to-[#9873FF] hover:bg-gradient-to-l hover:scale-105 transition duration-200
 }
 
-li:hover::before {
-  position: absolute;
-  content: " ";
-  height: 4px;
-  width: 100%;
-  background: #2a68ff;
-  right: 0;
-  bottom: -10px;
-  color: #2a68ff;
+.btn-outlined {
+  @apply font-medium transition duration-200 shadow-md md:mb-0 px-4 py-2 md:px-8 md:py-3 m-2 text-lg rounded-full text-gray-700 hover:bg-[#9873FF] hover:text-[#fff]  hover:border-transparent border-2 border-[#9873FF]
 }
 
-.icon{
-    cursor: pointer;
+.active {
+  @apply font-medium tracking-wide text-[#9873FF] transition-colors duration-200
 }
-.card{
-    background: #000;
-} 
+
+.default {
+  @apply font-medium tracking-wide text-gray-700 transition-colors duration-200 hover:text-[#9873FF]
+}
+
+@layer utilities {
+  .title-text {
+    @apply bg-gradient-to-r from-[#7E90FE] to-[#9873FF] bg-clip-text text-transparent font-mono
+  }
+}
